<resources>
    <string name="app_name">Projet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="email">Email</string>
    <string name="m2">Square meter</string>
    <string name="description">Description</string>
    <string name="floor">Floor</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="all_towns">All towns</string>
    <string name="create_new_location">Create new location</string>
    <string name="create">Create</string>
    <string name="new_town">New town</string>
    <string name="details_of_the_house">Details of the property</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="details_of_the_location">Details of the location</string>
    <string name="already_registred_text">Already registered? Click here to identify yourself.</string>
    <string name="dont_have_an_account_text">Don\'t have an account yet? Click here to create one.</string>
    <string name="languages">Languages</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="chooselanguages">Choose language</string>
    <string name="about_text">HouseSelling is a mobile application for anyone who wants to sell one or more properties.\n\nSimply create an account and add goods by entering their characteristics. If a city is not proposed automatically, it must be added via the "New town" button.\n\nYou have the possibility to edit your personal data, the characteristics of your property and the localities.\n\nYou can also delete one or more locations, your properties and your user account. Attention, the properties linked to your account are also erased.\n\nThank you for choosing HouseSelling.\n\nEnjoy your visit!</string>
    <string name="hascinema">Has cinema</string>
    <string name="hassportcenter">Has sport center</string>
    <string name="hasswimmingpool">Has swimming pool</string>
    <string name="listofhouse">My houses</string>
    <string name="myaccount">My account</string>
</resources>