<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7AE9D"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#585340"
            android:textSize="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/username_register"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/lastname_register"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/firstname_register"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/editText9"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="356dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#F2F2F2"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/editText12"
            tools:layout_editor_absoluteX="14dp" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#8A151B"
            android:text="@string/register"
            android:onClick="register"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="148dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="311dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="register_link"
            android:text="@string/already_registred_text"
            android:textColor="#585340"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:layout_editor_absoluteX="37dp" />

    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
    android:id="@+id/navigationdrawer_register"
    app:headerLayout="@layout/navigation_header"
    android:layout_width="220dp"
    android:layout_height="match_parent"
    app:menu="@layout/navigation_item"
    android:layout_gravity="start"
    android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>