<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7AE9D"
        tools:context=".CreateSale"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textColor="#585340"
            android:textSize="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/town_autocomplete"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />

            <Button
                android:id="@+id/createTown"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:background="#8A151B"
                android:text="@string/new_town"
                android:layout_marginRight="8dp"
                android:onClick="create_location"
                app:layout_constraintTop_toBottomOf="@+id/editText8"
                tools:layout_editor_absoluteX="148dp" />

            <Button
                android:id="@+id/consultTown"
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:background="#8A151B"
                android:text="@string/all_towns"
                android:onClick="consult_all_town"
                app:layout_constraintTop_toBottomOf="@+id/editText8"
                tools:layout_editor_absoluteX="148dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/description_create"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text|number|date"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/editText10"
            tools:layout_editor_absoluteX="16dp" />

        <Spinner
            android:id="@+id/type_create"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            tools:layout_editor_absoluteX="16dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/m2_create"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/m2"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText11"
                tools:layout_editor_absoluteX="121dp" />

            <EditText
                android:id="@+id/floor_create"
                android:layout_width="97dp"
                android:layout_height="45dp"
                android:ems="10"
                android:hint="@string/floor"
                android:textColor="#F2F2F2"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
                tools:layout_editor_absoluteX="263dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/price_create"
            android:layout_width="match_parent"
            android:layout_marginRight="16dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:textColor="#F2F2F2"
            android:hint="@string/price"
            android:inputType="number"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toBottomOf="@+id/postalcode_create"
            tools:layout_editor_absoluteX="16dp" />

        <EditText
            android:id="@+id/address_create"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:textColor="#F2F2F2"
            app:layout_constraintTop_toBottomOf="@+id/town_create"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="#8A151B"
            android:text="@string/create"
            android:onClick="create_house"
            app:layout_constraintTop_toBottomOf="@+id/editText8"
            tools:layout_editor_absoluteX="148dp" />

    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationdrawer_createsale"
        app:headerLayout="@layout/navigation_header"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:menu="@layout/navigation_item"
        android:layout_gravity="start"
        android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>