<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7AE9D"
        tools:context=".SignIn"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textColor="#585340"
            android:textSize="30dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />


        <EditText
            android:id="@+id/username_signin"
            android:layout_width="355dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="15dp" />


        <EditText
            android:id="@+id/password_signin"
            android:layout_width="354dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:layout_editor_absoluteX="16dp" />

        <Button
            android:id="@+id/button_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:background="#8A151B"
            android:text="@string/sign_in"
            android:onClick="sign_in"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
            tools:layout_editor_absoluteX="148dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="332dp"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:onClick="sign_in_link"
            android:text="@string/dont_have_an_account_text"
            android:textColor="#585340"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:layout_editor_absoluteX="37dp" />
    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationdrawer_signin"
        app:headerLayout="@layout/navigation_header"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:menu="@layout/navigation_item"
        android:layout_gravity="start"
        android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>