<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7AE9D"
        tools:context=".create_location"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createlocation_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_location"
            android:textColor="#585340"
            android:textSize="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/description_newlocation"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="text|number|date|time"
            android:textColor="#F2F2F2"
            android:hint="@string/description"
            app:layout_constraintTop_toBottomOf="@+id/town_newlocation"
            tools:layout_editor_absoluteX="15dp" />

        <EditText
            android:id="@+id/town_newlocation"
            android:layout_width="355dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="text"
            android:textColor="#F2F2F2"
            android:hint="@string/town"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6"
            tools:layout_editor_absoluteX="15dp" />

        <CheckBox android:id="@+id/hasswimmingpool_newlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has swimming pool"
            android:layout_marginLeft="16dp"
            android:textColor="#585340"
            android:onClick="onCheckBoxClickedSwimmingPool"/>

        <CheckBox android:id="@+id/hascinema_newlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has cinema"
            android:layout_marginLeft="16dp"
            android:textColor="#585340"
            android:onClick="onCheckBoxClickedCinema"/>

        <CheckBox android:id="@+id/hassportcenter_newlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Has sport center"
            android:layout_marginLeft="16dp"
            android:textColor="#585340"
            android:onClick="onCheckBoxClickedSportCenter"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#8A151B"
            android:text="@string/create"
            android:textColor="#F2F2F2"
            android:layout_marginTop="32dp"
            android:onClick="insert_new_location"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            tools:layout_editor_absoluteX="148dp" />

    </LinearLayout>

    <!-- Navigation Drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigationdrawer_createlocation"
        app:headerLayout="@layout/navigation_header"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        app:menu="@layout/navigation_item"
        android:layout_gravity="start"
        android:foregroundGravity="center"/>

</android.support.v4.widget.DrawerLayout>